--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,3 +1,3 @@
-<h1 class="md:text-2xl text-xl my-5 capitalize font-bold">
+<h1 class="md:text-2xl text-xl my-5 capitalize font-bold text-black">
   <slot />
 </h1>
