--- a/src/components/Paragraph.astro
+++ b/src/components/Paragraph.astro
@@ -1,3 +1,3 @@
-<p class="md:text-lg text-sm W-3/4 my-2 text-justify">
+<p class="md:text-lg text-sm W-3/4 my-2 text-justify text-black">
   <slot />
 </p>
