--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,9 +18,17 @@ const { title } = Astro.props.frontmatter || Astro.props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
+
+    <link
+      rel="shortcut icon"
+      href='data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" 
+      viewBox="0 0 100 100"><text y=".9em" font-size="90">🧑‍🚀</text></svg>'
+    />
+
     <meta name="generator" content={Astro.generator} />
+
     <title>{App.name} · {title}</title>
+    <meta name="description" content="An Astro template for your iOS apps." />
   </head>
 
   <body class:list={[THEME.base.join(" "), "font-sans"]}>
